improve tmux.conf and bashrc

--- a/tmux.conf
+++ b/tmux.conf
@@ -106,5 +106,11 @@ set -g visual-activity on
 
 set-option -g allow-rename off
 
+# 1. install Tmux Plugin Manager
+# git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm
+# 2. tmux source ~/.tmux.conf
+# 3. In a tmux session press prefix + I (capital i, as in Install) to fetch the plugin
+# plugins installed in ~/.tmux/plugins/
+
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
