[TC]: add lister plugins
AmpView 音频文件播放器
Imagine 用于查看图像/动画文件（不依赖其扩展名），支持几十种图像格式，进行部分图像处理
IniEd 用于查看、编辑 ini/inf/reg 等文件
CudaLister 带有语法高亮源的文本文件查看器
sumatrapdf sumatrapdf 查看器
wlx_anytag 在列表器中显示音频文件的元数据
wlx_pdfview 可查看 pdf 文件，postscript 文件，eps 文件

--- a/totalcmd/wincmd.ini
+++ b/totalcmd/wincmd.ini
@@ -379,28 +379,18 @@ Startup Guard=%Commander_Path%\plugins\wfx\StartupGuard\StartupGuard.wfx
 UnInstaller=%Commander_Path%\plugins\wfx\Uninstall\UnInstTC.wfx
 [ListerPlugins]
 0=%COMMANDER_PATH%\plugins\wlx\sumatrapdf\sumatrapdf.wlx
-0_detect=(ext="PDF") | ([0]="%" & [1]="P" & [2]="D" & [3]="F" & [4]="-" & [5]="1")
-1=%COMMANDER_PATH%\plugins\wlx\Flic\Flic.wlx
-2=%COMMANDER_PATH%\plugins\wlx\HTMLView\Htmlview.wlx
-3=%COMMANDER_PATH%\plugins\wlx\ICLView\ICLView.wlx
-3_detect=ext="ICL" | ext="ICO" | force
-4=%COMMANDER_PATH%\plugins\wlx\wlx_pdfview\pdfview.wlx
-4_detect=ext="PDF" | ext="PS" | ext="EPS" | ([0]="%" & [1]="!" & [2]="P" & [3]="S") | ([0]="%" & [1]="P" & [2]="D" & [3]="F" & [4]="-")
-5=%COMMANDER_PATH%\plugins\wlx\IniEd\Inied.wlx
-5_detect=ext="INI"|ext="INF"|ext="REG"
-6=%COMMANDER_PATH%\plugins\wlx\nfoviewer\Nfoviewer.wlx
-6_detect=ext="NFO" | ext="DIZ"
-7=%COMMANDER_PATH%\plugins\wlx\SWF Lister Lite\Swfll.wlx
-7_detect=ext="SWF" | (([0]="F" & [1]="W" & [2]="S")|([0]="C" & [1]="W" & [2]="S") & FORCE)
-8=%COMMANDER_PATH%\plugins\wlx\AmpView\AmpView.wlx
-8_detect=MULTIMEDIA | EXT="MP3" | EXT="WAV" | EXT="WMA" |EXT="OGG" | EXT="CDA" | EXT="MO3" | EXT="IT" |EXT="XM" | EXT="S3M" | EXT="MOD" | EXT="M3U" | EXT="PLS" | EXT="MID"| EXT="MIDI" | EXT="KAR"
-9=%COMMANDER_PATH%\plugins\wlx\LinkInfo\LinkInfo.wlx
-9_detect=force | (ext="LNK")
-10=%COMMANDER_PATH%\plugins\wlx\wlx_anytag\anytag.wlx
-10_detect=force | (EXT="AAC" | EXT="APE" | EXT=" FLAC" | EXT=" MP3" | EXT="MP4" | EXT=" M4A" | EXT=" M4B" | EXT=" MPC" | EXT="OFR" | EXT=" OFS" | EXT="OGG" | EXT=" SPX" | EXT="TTA" | EXT="WMA" | EXT="WV")
-11=%COMMANDER_PATH%\plugins\wlx\OOoViewer\OOoViewer.wlx
-11_detect=EXT="ODT" | EXT="OTT" | EXT="SXW" | EXT="STW" | EXT="SXC" | EXT="STC" | EXT="SXD" | EXT="STD" | EXT="DOCX" | EXT="DOTX" | EXT="FB2" | EXT="FB2Z" | EXT="ZFB2" | EXT="FBZ"
-12=%Commander_Path%\plugins\wlx\CudaLister\cudalister.wlx
+0_detect="(ext="PDF") | ([0]="%" & [1]="P" & [2]="D" & [3]="F" & [4]="-" & [5]="1")"
+1=%COMMANDER_PATH%\plugins\wlx\IniEd\Inied.wlx
+1_detect="ext="INI"|ext="INF"|ext="REG""
+2=%COMMANDER_PATH%\plugins\wlx\AmpView\AmpView.wlx
+2_detect="MULTIMEDIA | EXT="MP3" | EXT="WAV" | EXT="WMA" |EXT="OGG" | EXT="CDA" | EXT="MO3" | EXT="IT" |EXT="XM" | EXT="S3M" | EXT="MOD" | EXT="M3U" | EXT="PLS" | EXT="MID"| EXT="MIDI" | EXT="KAR""
+3=%COMMANDER_PATH%\plugins\wlx\wlx_anytag\anytag.wlx
+3_detect="force | (EXT="AAC" | EXT="APE" | EXT=" FLAC" | EXT=" MP3" | EXT="MP4" | EXT=" M4A" | EXT=" M4B" | EXT=" MPC" | EXT="OFR" | EXT=" OFS" | EXT="OGG" | EXT=" SPX" | EXT="TTA" | EXT="WMA" | EXT="WV")"
+4=%Commander_Path%\plugins\wlx\CudaLister\cudalister.wlx
+5=%Commander_Path%\plugins\wlx\Imagine\Imagine.wlx
+5_detect="MULTIMEDIA"
+6=%COMMANDER_PATH%\plugins\wlx\wlx_pdfview\pdfview.wlx
+6_detect="ext="PDF" | ext="PS" | ext="EPS" | ([0]="%" & [1]="!" & [2]="P" & [3]="S") | ([0]="%" & [1]="P" & [2]="D" & [3]="F" & [4]="-")"
 [ContentPlugins]
 0=%COMMANDER_PATH%\plugins\wdx\Directory\Directory.wdx
 1=%COMMANDER_PATH%\plugins\wdx\DirSizeCalc\DirSizeCalc.wdx
