[TC]: add file system plugins
"Environment Variables" 环境变量插件，可以简单的创建、编辑、去除环境变量
Registry 注册表插件，将注册表视为文件夹，像操作文件夹一样，支持浏览、查看、修改、增加、复制、删除等操作，亦支持远程注册表
sftpplug Allows to access remote servers via secure FTP (FTP via SSH)
StartupGuard 以文件列表的方式列出 Windows 启动自启动的文件
Uninstall 列出已安装文件列表，可以查看配置和卸载

--- a/totalcmd/wincmd.ini
+++ b/totalcmd/wincmd.ini
@@ -228,14 +228,6 @@ ForeColor=0
 MarkColor=255
 CursorColor=16777215
 CursorText=16711680
-[Tabstops]
-0=167
-1=171
-3=231
-4=108
-6=518
-5=95
-AdjustWidth=1
 [ViewModes]
 0_name=<default>
 0_icon=
@@ -377,6 +369,7 @@ Environment Variables=%COMMANDER_PATH%\plugins\wfx\Environment Variables\Envvar.
 Registry=%COMMANDER_PATH%\plugins\wfx\Registry\registry.wfx
 Startup Guard=%Commander_Path%\plugins\wfx\StartupGuard\StartupGuard.wfx
 UnInstaller=%Commander_Path%\plugins\wfx\Uninstall\UnInstTC.wfx
+Secure FTP=%Commander_Path%\plugins\wfx\sftpplug\sftpplug.wfx
 [ListerPlugins]
 0=%COMMANDER_PATH%\plugins\wlx\sumatrapdf\sumatrapdf.wlx
 0_detect="(ext="PDF") | ([0]="%" & [1]="P" & [2]="D" & [3]="F" & [4]="-" & [5]="1")"
