[TC]: add Packer Plugins
7zip 用于压缩/解压 .7z 压缩包，并可创建自解压文件
ChmDir 支持 CHM 文件格式，对 CHM 中的文件进行提取、搜索、压缩、删除等操作，可以制作简单的 CHM 文件
GifWcx 使用 ctrl+pagedown 打开 gif 文件
iso 用于浏览、提取各种光盘映像中的文件
wipe 文件粉碎机，用于彻底删除文件，一旦删除即不可恢复

--- a/totalcmd/wincmd.ini
+++ b/totalcmd/wincmd.ini
@@ -288,17 +288,9 @@ AdjustWidth=1
 iso=192,%COMMANDER_PATH%\plugins\wcx\iso\iso.wcx
 7zip=95,%COMMANDER_PATH%\plugins\wcx\7zip\7zip.wcx
 Chmdir=479,%COMMANDER_PATH%\plugins\wcx\ChmDir\Chmdir.wcx
-Iclread=15,%COMMANDER_PATH%\plugins\wcx\ICLRead\Iclread.wcx
-Mhtunp=260,%COMMANDER_PATH%\plugins\wcx\MHT Unpacker\Mhtunp.wcx
-Mover=279,%COMMANDER_PATH%\plugins\wcx\Mover\Mover.wcx
-Msi-Plus=15,%COMMANDER_PATH%\plugins\wcx\MSI Plus\Msi-Plus.wcx
-lst=23,%COMMANDER_PATH%\plugins\wcx\CatalogMaker\CatalogMaker.wcx
-msi=0,%COMMANDER_PATH%\plugins\wcx\msi\msi.wcx
-msp=0,%COMMANDER_PATH%\plugins\wcx\msi\msi.wcx
-7z=95,%COMMANDER_PATH%\plugins\wcx\7zip\7zip.wcx
-Cryptonite=607,%COMMANDER_PATH%\Plugins\WCX\cryptonite\cryptonite.wcx
+7z=223,%COMMANDER_PATH%\plugins\wcx\7zip\7zip.wcx
 wipe=5,%COMMANDER_PATH%\plugins\wcx\wipe\wipe.wcx
-aes=93,%COMMANDER_PATH%\plugins\wcx\aes\aes.wcx
+gif=287,%Commander_Path%\plugins\wcx\GifWcx\GifWcx.wcx
 [FileSystemPlugins]
 Environment Variables=%COMMANDER_PATH%\plugins\wfx\Environment Variables\Envvar.wfx
 Registry=%COMMANDER_PATH%\plugins\wfx\Registry\registry.wfx
