[TC]: add plugins GraphicConverter HTTPBrowser

--- a/totalcmd/wincmd.ini
+++ b/totalcmd/wincmd.ini
@@ -291,12 +291,14 @@ Chmdir=479,%COMMANDER_PATH%\plugins\wcx\ChmDir\Chmdir.wcx
 7z=223,%COMMANDER_PATH%\plugins\wcx\7zip\7zip.wcx
 wipe=5,%COMMANDER_PATH%\plugins\wcx\wipe\wipe.wcx
 gif=287,%Commander_Path%\plugins\wcx\GifWcx\GifWcx.wcx
+GraphConv=263,%Commander_Path%\plugins\wcx\GraphicConverter\GraphicConverter.wcx
 [FileSystemPlugins]
 Environment Variables=%COMMANDER_PATH%\plugins\wfx\Environment Variables\Envvar.wfx
 Registry=%COMMANDER_PATH%\plugins\wfx\Registry\registry.wfx
 Startup Guard=%Commander_Path%\plugins\wfx\StartupGuard\StartupGuard.wfx
 UnInstaller=%Commander_Path%\plugins\wfx\Uninstall\UnInstTC.wfx
 Secure FTP=%Commander_Path%\plugins\wfx\sftpplug\sftpplug.wfx
+HTTP Browser=%Commander_Path%\plugins\wfx\HTTPBrowser\httpbrowser.wfx
 [ListerPlugins]
 0=%COMMANDER_PATH%\plugins\wlx\sumatrapdf\sumatrapdf.wlx
 0_detect="(ext="PDF") | ([0]="%" & [1]="P" & [2]="D" & [3]="F" & [4]="-" & [5]="1")"
