[TC]: add csv lister plugin

--- a/totalcmd/wincmd.ini
+++ b/totalcmd/wincmd.ini
@@ -308,11 +308,13 @@ HTTP Browser=%Commander_Path%\plugins\wfx\HTTPBrowser\httpbrowser.wfx
 2_detect="MULTIMEDIA | EXT="MP3" | EXT="WAV" | EXT="WMA" |EXT="OGG" | EXT="CDA" | EXT="MO3" | EXT="IT" |EXT="XM" | EXT="S3M" | EXT="MOD" | EXT="M3U" | EXT="PLS" | EXT="MID"| EXT="MIDI" | EXT="KAR""
 3=%COMMANDER_PATH%\plugins\wlx\wlx_anytag\anytag.wlx
 3_detect="force | (EXT="AAC" | EXT="APE" | EXT=" FLAC" | EXT=" MP3" | EXT="MP4" | EXT=" M4A" | EXT=" M4B" | EXT=" MPC" | EXT="OFR" | EXT=" OFS" | EXT="OGG" | EXT=" SPX" | EXT="TTA" | EXT="WMA" | EXT="WV")"
-4=%Commander_Path%\plugins\wlx\CudaLister\cudalister.wlx
-5=%Commander_Path%\plugins\wlx\Imagine\Imagine.wlx
-5_detect="MULTIMEDIA"
-6=%COMMANDER_PATH%\plugins\wlx\wlx_pdfview\pdfview.wlx
-6_detect="ext="PDF" | ext="PS" | ext="EPS" | ([0]="%" & [1]="!" & [2]="P" & [3]="S") | ([0]="%" & [1]="P" & [2]="D" & [3]="F" & [4]="-")"
+4=%Commander_Path%\plugins\wlx\Imagine\Imagine.wlx
+4_detect="MULTIMEDIA"
+5=%COMMANDER_PATH%\plugins\wlx\wlx_pdfview\pdfview.wlx
+5_detect="ext="PDF" | ext="PS" | ext="EPS" | ([0]="%" & [1]="!" & [2]="P" & [3]="S") | ([0]="%" & [1]="P" & [2]="D" & [3]="F" & [4]="-")"
+6=%COMMANDER_PATH%\plugins\wlx\wlx_csv_0_6_1\wlx_csv.wlx
+6_detect="force | (ext="CSV" | ext="TSV")"
+7=%Commander_Path%\plugins\wlx\CudaLister\cudalister.wlx
 [ContentPlugins]
 [user]
 menu1=&R Recycle
