[TC]: disable csv lister plugin
csv lister opens big file slow, disable it by default

--- a/totalcmd/wincmd.ini
+++ b/totalcmd/wincmd.ini
@@ -312,9 +312,9 @@ HTTP Browser=%Commander_Path%\plugins\wfx\HTTPBrowser\httpbrowser.wfx
 4_detect="MULTIMEDIA"
 5=%COMMANDER_PATH%\plugins\wlx\wlx_pdfview\pdfview.wlx
 5_detect="ext="PDF" | ext="PS" | ext="EPS" | ([0]="%" & [1]="!" & [2]="P" & [3]="S") | ([0]="%" & [1]="P" & [2]="D" & [3]="F" & [4]="-")"
-6=%COMMANDER_PATH%\plugins\wlx\wlx_csv_0_6_1\wlx_csv.wlx
-6_detect="force | (ext="CSV" | ext="TSV")"
-7=%Commander_Path%\plugins\wlx\CudaLister\cudalister.wlx
+6=%Commander_Path%\plugins\wlx\CudaLister\cudalister.wlx
+7=%COMMANDER_PATH%\plugins\wlx\wlx_csv_0_6_1\wlx_csv.wlx
+7_detect="ext="CCCSV""
 [ContentPlugins]
 [user]
 menu1=&R Recycle
